refector: 拆出 src 與 build，並將 entry point 改成 build/index.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
         "target": "ES6",
+        "outDir": "./build/",
+        "declaration": true,
         "experimentalDecorators": true,
         "module": "commonjs"
     },
     "files": [
-        "types.ts",
+        "src/index.ts",
     ]
 }
