--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "types",
   "version": "0.0.1",
   "description": "",
-  "main": "types.js",
+  "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
