--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "types",
   "version": "0.0.1",
   "description": "",
-  "main": "build/index.js",
+  "main": "build/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx mocha build/test"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/leon740727/types/issues"
   },
-  "homepage": "https://github.com/leon740727/types#readme"
+  "homepage": "https://github.com/leon740727/types#readme",
+  "devDependencies": {
+    "@types/node": "^14.14.20",
+    "mocha": "^8.2.1",
+    "typescript": "^4.1.3"
+  }
 }
