--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,13 @@
         "target": "ES6",
         "outDir": "./build/",
         "declaration": true,
-        "experimentalDecorators": true,
+        "strictNullChecks": true,
         "module": "commonjs"
     },
     "files": [
         "src/index.ts",
-    ]
+    ],
+    "include": [
+        "test",
+    ],
 }
